--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <header>
-      <img src="./resources/images/img-myt-logo.jpg" alt="" class="logo">
-      <h3>My Times</h3>
-      <nav>
+      <span class="logo"><img src="./resources/images/img-myt-logo.jpg" alt="">
+      <h3>My Times</h3></span>
+            <nav>
+
         <span> <a href=""> <h5> World </h5> </a> </span>
         <span> <a href=""> <h5> U.S. </h5> </a> </span>
         <span> <a href=""> <h5> Tech </h5> </a> </span>
