--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
   <body>
     <header>
       <span class="logo"><img src="./resources/images/img-myt-logo.jpg" alt="">
-      <h3>My Times</h3></span>
-            <nav>
-
+        <h3>My Times</h3>
+      </span>
+      <nav>
         <span> <a href=""> <h5> World </h5> </a> </span>
         <span> <a href=""> <h5> U.S. </h5> </a> </span>
         <span> <a href=""> <h5> Tech </h5> </a> </span>
         <span> <a href=""> <h5> Science </h5> </a> </span>
-
       </nav>
     </header>
+
+    <div class="container">
+      dfd
+    </div>
+
+
+
+
+
   </body>
 </html>
