Add columns and top_a

--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
 
       </nav>
     </header>
+
+    <div class="main">
+      <div class="column large">
+
+        <div class="top_a">
+          Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."
+        </div>
+
+
+      </div>
+
+      <div class="column medium"> medium
+      </div>
+
+      <div class="column small"> small
+      </div>
+
+
+
+    </div>
+
   </body>
 </html>
